--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1c
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     
-    <title>mindful circle</title>
+    <title>MINDFUL CIRCLE</title>
   </head>
   <style>
     body {
