--- a/public/About.html
+++ b/public/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Know More | Mindful Circle</title>
+    <title>Know More | Mindful circle</title>
     <link rel="stylesheet" href="About.css">
 </head>
 <body>
